# msg_distiller

./: .dockerignore  .editorconfig  .gitignore  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE.md  Dockerfile  FINAL_STATUS.md  ITERATION_LOG.md  Makefile  QUALITY_BASELINE.md  README.md  REMEDIATION_PLAN.md  SYSTEM_MAP.md  app.py  app_streamlit_legacy.py  docker-compose.yml  justfile  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml  pre-commit.yml
alembic/versions/: 202512131400_add_source_to_dedup_keys.py  202603271800_add_event_review_lifecycle.py  202607111200_add_event_embeddings.py  202607111300_add_thread_ts_columns.py  202607111400_add_object_suggestions.py
audit/: findings.json  summary.md
config/defaults/: main.example.yaml
config/prompts/: slack.yaml  slack_t_product.yaml  telegram.yaml
config/schemas/: channels.schema.json  main.schema.json
docs/: CONFIG.md  EXTRACTION_QUALITY_AUDIT_2025_12.md  OPERATIONS_OBSERVABILITY.md  QUALITY_POST_ANALYSIS_2026-04-17.md  README.md  TECHNICAL_SPEC_EXTRACTION_QUALITY.md  audit_test_plan.md  llm_audit_report.md  pipeline_workers.md  pr_arch_prompt.md  pr_architecture_review.md  pr_audit_prompt.md
docs/refactor/: PLAN-001_refactor_master_plan.md  REF-001_refactor_spec_jtbd_architecture.md
frontend/: .gitignore  README.md  eslint.config.js  package-lock.json  package.json  playwright.config.ts  playwright.real.config.ts  tailwind.config.ts  vitest.config.ts  vitest.setup.ts
frontend/.storybook/: main.ts  preview.ts
frontend/e2e/: real-data.spec.ts  run_seeded_api_server.py  smoke.spec.ts
frontend/src/: index.css
frontend/src/app/: App.tsx  providers.tsx  router.tsx
frontend/src/components/events/: analysis-dashboard.tsx  empty-state.stories.tsx  empty-state.tsx  error-state.stories.tsx  error-state.tsx  event-detail-panel.stories.tsx  event-detail-panel.tsx  events-table.tsx  loading-state.stories.tsx  loading-state.tsx  review-action-bar.test.tsx  review-action-bar.tsx  review-stats-bar.stories.tsx  review-stats-bar.tsx  review-status-tabs.tsx  timeline-chart.tsx  timeline-filters.tsx
frontend/src/components/layout/: app-shell.tsx
frontend/src/components/ui/: badge.tsx  button.tsx  card.tsx  input.tsx  textarea.tsx
frontend/src/features/events/: api.ts  mutations.ts  queries.ts  table-columns.tsx  types.ts
frontend/src/lib/: env.ts  utils.ts
frontend/src/lib/api/: client.test.ts  client.ts
frontend/src/pages/review-queue/: page.tsx
frontend/src/pages/timeline/: page.tsx
openspec/changes/react-frontend-mvp/: proposal.md  tasks.md
openspec/changes/react-frontend-mvp/notes/: backend-inventory.md  frontend-architecture.md  python-ui-parity.md
openspec/changes/react-frontend-mvp/specs/frontend-mvp/: spec.md
scripts/: audit_extractions.py  pipeline_runtime.py  quality_metrics_report.py  run_api_server.py  run_dash.py  run_embedding_worker.py  run_ingest_worker.py  run_llm_worker.py  run_multi_source_pipeline.py  telegram_qr_auth.py  test_pipeline_minimal.py  test_prompt_quality.py  test_prompt_variants.py
src/adapters/: bulk_persistence.py  job_runner_inprocess.py  llm_client.py  postgres_repository.py  postgres_task_queue.py  query_builders.py  repository_factory.py  slack_client.py  slack_permalink_cache.py  slack_users_cache.py  sqlite_repository.py  telegram_client.py
src/api/: __init__.py  app.py  dependencies.py  routes_events.py  routes_registry.py  routes_stories.py  schemas.py
src/clients/: slack_wrapped.py
src/config/: settings.py
src/domain/: candidate_constants.py  deduplication_constants.py  exceptions.py  models.py  protocols.py  specifications.py  task_queue.py  validation_constants.py
src/observability/: metrics.py
src/presentation/: streamlit_orchestration.py
src/presentation/dash_app/: __init__.py  app.py  callbacks.py  layout_review.py  layout_timeline.py
src/services/: deduplicator.py  extraction_policy.py  intra_message_postprocess.py  llm_client_pool.py  object_registry.py  task_queue_factory.py  time_completion.py  validators.py  vector_math.py
src/use_cases/: build_candidates.py  deduplicate_events.py  embed_events.py  extract_events.py  ingest_messages.py  ingest_telegram_messages.py  pipeline_factories.py  pipeline_orchestrator.py  pipeline_priorities.py  review_events.py  semantic_dedup.py  stories.py
src/workers/: pipeline.py
tests/: conftest.py  factories.py  test_app_channel_attribution.py  test_bulk_persistence_counts.py  test_deduplicator.py  test_domain_models_multi_source.py  test_extract_events_caching.py  test_extraction_policy_enforcement.py  test_extraction_time_completion_integration.py  test_extractor_di.py  test_intra_message_postprocess.py  test_object_suggestions.py  test_prompt_hashing.py  test_prompt_metadata.py  test_repository_multi_source.py  test_review_events.py  test_semantic_dedup_merge.py  test_semantic_embeddings.py  test_slack_ordering_numeric.py  test_stories_and_threads.py  test_time_completion_policy.py
tests/api/: conftest.py  test_events_api.py
tests/e2e/: __init__.py  conftest.py  test_dash_smoke.py
tests/workers/: test_pipeline_workers.py
